# angle-kodi

./: .gitignore  CMakeLists.txt  PlatformLinux.cmake
cmake/: Compiler.cmake  D3D.cmake  GL.cmake  GLESv2.cmake  Metal.cmake  WebKitCommon-minimal.cmake
src/common/: ANGLEShaderProgramVersion.h  angle_commit.h
src/gpu_info_util/: SystemInfo_win.cpp
